# Practica0

./: .gitmodules  README.md
HaskTiger/: Decisiones.txt  Dudas.txt  HaskTiger.cabal  README.md  runtime.c  stack.yaml
HaskTiger/.stack-work/install/x86_64-linux/ghc-8.0/8.0.2/flag-cache/: HaskTiger-0.1.0.0-1NjWJIneMSYKOEJS7DxzEs  cond-0.4.1.1-2yYcKtUJ6TG4fyL0AuCq0n  mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6  parsec-3.1.11-4MSigapSiUw1ERNBXZn0E5  text-1.2.2.2-1cn50juu89QSL9QkUVcRY
HaskTiger/.stack-work/install/x86_64-linux/ghc-8.0/8.0.2/lib/x86_64-linux-ghc-8.0.2/HaskTiger-0.1.0.0-1NjWJIneMSYKOEJS7DxzEs/: TigerAbs.hi  TigerEnv.hi  TigerErrores.hi  TigerEscap.dyn_hi  TigerEscap.hi  TigerParser.dyn_hi  TigerSeman.dyn_hi  TigerSeman.hi  TigerSymbol.dyn_hi  TigerTemp.dyn_hi  TigerTips.hi
HaskTiger/.stack-work/install/x86_64-linux/ghc-8.0/8.0.2/lib/x86_64-linux-ghc-8.0.2/cond-0.4.1.1-2yYcKtUJ6TG4fyL0AuCq0n/Control/: Conditional.hi
HaskTiger/.stack-work/install/x86_64-linux/ghc-8.0/8.0.2/lib/x86_64-linux-ghc-8.0.2/parsec-3.1.11-4MSigapSiUw1ERNBXZn0E5/Text/: Parsec.dyn_hi  Parsec.hi
HaskTiger/.stack-work/install/x86_64-linux/ghc-8.0/8.0.2/lib/x86_64-linux-ghc-8.0.2/text-1.2.2.2-1cn50juu89QSL9QkUVcRY/Data/: Text.dyn_hi  Text.hi
HaskTiger/.stack-work/install/x86_64-linux/ghc-8.0/8.0.2/pkgdb/: HaskTiger-0.1.0.0-1NjWJIneMSYKOEJS7DxzEs.conf  cond-0.4.1.1-2yYcKtUJ6TG4fyL0AuCq0n.conf  mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6.conf  package.cache  parsec-3.1.11-4MSigapSiUw1ERNBXZn0E5.conf  text-1.2.2.2-1cn50juu89QSL9QkUVcRY.conf
HaskTiger/.stack-work/install/x86_64-linux/lts-9.0/8.0.2/flag-cache/: cond-0.4.1.1-2yYcKtUJ6TG4fyL0AuCq0n  mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6  parsec-3.1.11-1aqiimsgq2dCv7eoaC8WuX  text-1.2.2.2-9UQZjEJZQFSGMffj1Z5g00
HaskTiger/.stack-work/install/x86_64-linux/lts-9.0/8.0.2/lib/x86_64-linux-ghc-8.0.2/HaskTiger-0.1.0.0-8sS9j76S4uUE6NaT8hRlFo/: TigerAbs.dyn_hi  TigerAbs.hi  TigerEnv.dyn_hi  TigerEnv.hi  TigerErrores.dyn_hi  TigerErrores.hi  TigerEscap.hi  TigerLexer.dyn_hi  TigerLexer.hi  TigerPretty.dyn_hi  TigerSeman.dyn_hi  TigerSeman.hi  TigerSres.dyn_hi  TigerSres.hi  TigerSymbol.hi  TigerTemp.dyn_hi  TigerTips.dyn_hi  TigerTips.hi
HaskTiger/.stack-work/install/x86_64-linux/lts-9.0/8.0.2/pkgdb/: HaskTiger-0.1.0.0-8sS9j76S4uUE6NaT8hRlFo.conf  cond-0.4.1.1-2yYcKtUJ6TG4fyL0AuCq0n.conf  package.cache
HaskTiger/app/: TigerMain.hs
HaskTiger/src/: .directory  PrintEnv.hs  TigerAbs.hs  TigerAssem.hs  TigerCanon.hs  TigerEnv.hs  TigerErrores.hs  TigerEscap.hs  TigerFrame.hs  TigerInterp.hs  TigerLexer.hs  TigerParser.hs  TigerPretty.hs  TigerPrettyIr.hs  TigerSeman.hs  TigerSres.hs  TigerSymbol.hs  TigerTemp.hs  TigerTips.hs  TigerTrans.hs  TigerTraversals.hs  TigerTree.hs
HaskTiger/test/: EscapTesting.hs  Interp.hs  Parser.hs  Tools.hs  TypTesting.hs
HaskTiger/test/test_code/type/: .fun-vs-var.tig.swp
Practica 0/: ej1.tig  ej2.tig  ej3.tig  ej4.hs  ej5.txt  ej6.tig  ej7.hs
(+181 files in other folders)
