name:                HaskTiger
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://git.dcc.fceia.unr.edu.ar/Compiladores
license:             BSD3
license-file:        LICENSE
author:              Martincito
maintainer:          martin@dcc.fceia.unr.edu.ar
copyright:           2017 Author name here
category:            Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TigerAbs
        , TigerEnv
        , TigerErrores
        , TigerEscap
        , TigerLexer
        , TigerParser
        , TigerPretty
        , TigerSeman
        , TigerSres
        , TigerSymbol
        , TigerTemp
        , TigerTips
        , PrintEnv
  build-depends:       base
                       , containers
                       , text
                       , mtl
                       , parsec
                       , pretty
                       , cond
                       , transformers
                       , monad-loops
  default-language:    Haskell2010

executable HaskTiger
  hs-source-dirs:      app
  main-is:             TigerMain.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                       , containers
                       , text
                       , mtl
                       , parsec
                       , pretty
                       , transformers
                       , cond
                       , HaskTiger
  default-language:    Haskell2010

test-suite HaskTiger-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , parsec
                     , directory
                     , ansi-terminal
                     , HaskTiger
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Parser
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Parser.hs
  build-depends:       base
                     , parsec
                     , directory
                     , ansi-terminal
                     , HaskTiger
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Escap
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             EscapTesting.hs
  build-depends:       base
                     , parsec
                     , directory
                     , ansi-terminal
                     , HaskTiger
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://git.dcc.fceia.unr.edu.ar/Compiladores/TigerHaskell
